plugins/kotlin/idea/tests/testData/multiplatform/duplicateExpectsExplicit/bottom/bottom.kt
// !RENDER_DIAGNOSTICS_MESSAGES

actual class <!AMBIGUOUS_EXPECTS("Actual class 'A'; left, right"), LINE_MARKER("descr='Has expects in [right, left] module'")!>A<!>
